--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -205,7 +205,7 @@
 
 - name: Install lazygit
   ansible.builtin.get_url:
-    url: https://github.com/jesseduffield/lazygit/releases/download/v0.44.0lazygit_0.44.0.tar.gz
+    url: https://github.com/jesseduffield/lazygit/releases/download/v0.43.1/lazygit_0.43.1_Linux_x86_64.tar.gz
     dest: /tmp/lazygit.tar.gz
     force: no
 
