--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -207,7 +207,7 @@
   ansible.builtin.get_url:
     url: https://github.com/jesseduffield/lazygit/releases/download/v0.43.1/lazygit_0.43.1_Linux_x86_64.tar.gz
     dest: /tmp/lazygit.tar.gz
-    force: no
+    force: yes
 
 - name: Extract /tmp/lazygit.tar.gz
   ansible.builtin.unarchive:
