--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -20,10 +20,12 @@
     background_darkness = 0.97
     background_type = transparent
     cursor_color = "#7c6f64"
+    font = MonoLisa 10
     foreground_color = "#839496"
     scrollbar_position = hidden
     scrollback_lines = 1000
     palette = "#181818:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#ebdbb2:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
+    use_system_font = False
   [[gruvbox-dark]]
     background_color = "#282828"
     cursor_color = "#7c6f64"
